--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
           <a class="navbar-brand" href="#">
             <img src="assets/logo.webp" />
           </a>
+
+          <div class="d-flex d-lg-none d-xl-none d-xxl-none">
+            <a href="https://fi.woo.org/swap" class="btn-default">Launch App</a>
+            <div class="btn-sign">
+              <span>🚀</span>
+            </div>
+          </div>
+
           <button
             class="navbar-toggler"
             type="button"
@@ -39,7 +47,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"><i class="bi bi-list"></i></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -59,9 +67,7 @@
             </ul>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 main-links">
               <li class="nav-item">
-                <a class="nav-link active" href="https://fi.woo.org/swap"
-                  >Swap</a
-                >
+                <a class="nav-link" href="https://fi.woo.org/swap">Swap</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://dex.woo.org/">Orderbook</a>
@@ -75,13 +81,11 @@
                 >
               </li>
             </ul>
-            <div class="d-flex">
-              <a href="https://fi.woo.org/swap" class="btn-default"
-                >Launch App</a
-              >
-              <div class="btn-sign">
-                <span>🚀</span>
-              </div>
+          </div>
+          <div class="d-flex d-none d-lg-flex">
+            <a href="https://fi.woo.org/swap" class="btn-default">Launch App</a>
+            <div class="btn-sign">
+              <span>🚀</span>
             </div>
           </div>
         </div>
