--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="WOOFi is a cross-chain DEX where anyone can swap, stake, and earn crypto and trade perpetual futures across every major blockchain including Ethereum, Avalanche, BNB Chain, Polygon, Arbitrum, Optimism, zkSync Era, Polygon zkEVM, Linea and Base"
+    />
+    <meta
+      property="og:title"
+      content="WOOFi | Decentralized crypto exchange | Swap, stake, and earn | Trade perp"
+    />
+    <meta
+      property="og:description"
+      content="WOOFi is a cross-chain DEX where anyone can swap, stake, and earn crypto and trade perpetual futures across every major blockchain including Ethereum, Avalanche, BNB Chain, Polygon, Arbitrum, Optimism, zkSync Era, Polygon zkEVM, Linea and Base"
+    />
+    <meta
+      property="og:image"
+      content="https://oss.woo.network/static/woox/woo_network_share3.jpg"
+    />
+    <meta property="og:site_name" content="WOO Network" />
+    <meta name="og:type" content="website" />
 
-    <title>Woo Dex App</title>
+    <link rel="icon" href="assets/favicon.ico" />
+
+    <title>
+      WOOFi | Decentralized crypto exchange | Swap, stake, and earn | Trade perp
+    </title>
 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link
@@ -34,7 +56,7 @@
           <div class="d-flex d-lg-none d-xl-none d-xxl-none">
             <a href="https://fi.woo.org/swap" class="btn-default">Launch App</a>
             <div class="btn-sign">
-              <span>🚀</span>
+              <span><i class="bi bi-rocket-takeoff"></i></span>
             </div>
           </div>
 
@@ -85,7 +107,7 @@
           <div class="d-flex d-none d-lg-flex">
             <a href="https://fi.woo.org/swap" class="btn-default">Launch App</a>
             <div class="btn-sign">
-              <span>🚀</span>
+              <span><i class="bi bi-rocket-takeoff"></i></span>
             </div>
           </div>
         </div>
@@ -119,8 +141,8 @@
                       >
                         Launch App
                       </a>
-                      <div class="btn-sign btn-sign-updated">
-                        <span>🚀</span>
+                      <div class="btn-sign-updated btn-sign">
+                        <span><i class="bi bi-rocket-takeoff"></i></span>
                       </div>
                     </div>
                     <div class="col-lg-7 col-md-7">
